--- a/ESD_HocTiengAnh/Views/_ViewImports.cshtml
+++ b/ESD_HocTiengAnh/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ESD_HocTiengAnh
 @using ESD_HocTiengAnh.Models
+@using ESD_HocTiengAnh.Controllers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
