--- a/ESD_HocTiengAnh/Views/Home/Learn.cshtml
+++ b/ESD_HocTiengAnh/Views/Home/Learn.cshtml
@@ -11,6 +11,7 @@
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
             <div class="content" style="text-align: center; margin-top: 50%">
                 <a asp-action="@nameof(HomeController.TracNghiem)" asp-route-id="@Model.IdChude">Học từ ngay</a>
+                <a asp-action="@nameof(HomeController.Game)" asp-route-id="@Model.IdChude">Game</a>
                 <h1 class="display-4">Chọn cấp độ</h1>
             </div>
         </div>
